# nvim-coverage-tests

./: .dockerignore  Dockerfile  Makefile
config/lua/: plugins.lua
languages/: cpp_spec.lua  go_spec.lua  php_spec.lua  python_spec.lua  ruby_spec.lua  typescript_spec.lua
languages/cpp/: .gitignore
languages/cpp/src/: example.cpp  example.hpp
languages/cpp/tests/: CMakeLists.txt  exampleTests.cpp
languages/php/: composer.json
languages/php/src/: AbstractDummy.php  Dummy.php  DummyInterface.php
languages/php/tests/: DummyTest.php
languages/python/: .coveragerc  .gitignore  generate.sh
